add: all CRUDs endpoint functional
