# api/handlers/login.go
@@ -68,18 +68,88 @@ func RegisterHandler(c *fiber.Ctx, ctx context.Context, ls *s.LoginService) erro
 	return c.JSON(fiber.Map{"message": "Usuário registrado com sucesso"})
 }
 
+// DeleteHandler é o handler para a rota DELETE /api/v1/delete
+// @Summary Delete
+// @Description Deleta um usuário
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param body body DeleteRequest true "Corpo da requisição"
+// @Success 200 {object} map[string]string
+// @Failure 400 {object} map[string]string
+// @Router /api/v1/delete [delete]
 func DeleteHandler(c *fiber.Ctx, ctx context.Context, ls *s.LoginService) error {
 	var req DeleteRequest
-	var user repositories.User
 	err := IsValidDeleteRequest(c, &req)
 	if err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, "Erro de validação: "+err.Error())
 	}
 
-	err = ls.DeleteUser(ctx, &user)
+	userInfosToCheck := repositories.User{
+		Email:    req.Email,
+		Password: req.Password,
+	}
+	err = ls.DeleteUser(ctx, &userInfosToCheck)
 	if err != nil {
 		return fiber.NewError(fiber.StatusInternalServerError, "Erro ao deletar usuário: "+err.Error())
 	}
 
 	return c.JSON(fiber.Map{"message": "Usuário deletado com sucesso"})
+}
+
+// UpdateHandler é o handler para a rota PATCH /api/v1/update
+// @Summary Update
+// @Description Atualiza um usuário
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param body body UpdateRequest true "Corpo da requisição"
+// @Success 200 {object} map[string]string
+// @Failure 400 {object} map[string]string
+// @Router /api/v1/update [patch]
+func UpdateHandler(c *fiber.Ctx, ctx context.Context, ls *s.LoginService) error {
+	var req UpdateRequest
+	err := IsValidUpdateRequest(c, &req)
+	if err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, "Erro de validação: "+err.Error())
+	}
+
+	userInfosToUpdate := repositories.User{
+		Email:    req.Email,
+		Password: req.Password,
+		ID:       req.ID,
+		Name:     req.Name,
+	}
+	err = ls.UpdateUser(ctx, &userInfosToUpdate)
+	if err != nil {
+		return fiber.NewError(fiber.StatusInternalServerError, "Erro ao atualizar usuário: "+err.Error())
+	}
+
+	return c.JSON(fiber.Map{"message": "Usuário atualizado com sucesso"})
+}
+
+// GetUsersHandler é o handler para a rota GET /api/v1/user/:email
+// @Summary Get Users
+// @Description Busca um usuário
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param email path string true "Email do usuário"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} map[string]string
+// @Failure 500 {object} map[string]string
+// @Router /api/v1/user/{email} [get]
+func GetUsersHandler(c *fiber.Ctx, ctx context.Context, ls *s.LoginService) error {
+	var req GetRequest
+	err := IsValidGetUsersRequest(c, &req)
+	if err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, "Erro de validação: "+err.Error())
+	}
+
+	users, err := ls.GetUser(ctx, req.Email)
+	if err != nil {
+		return fiber.NewError(fiber.StatusInternalServerError, "Erro ao buscar usuários: "+err.Error())
+	}
+
+	return c.JSON(fiber.Map{"users": users})
 }
